javascript to prevent mismatching model visibility in mdoel groups

--- a/weblab/static/sass/style.scss
+++ b/weblab/static/sass/style.scss
@@ -921,6 +921,12 @@ td.storypart-content{
 }
 
 
+#id_visibility option:disabled, #availableModels option:disabled{
+    color:#E0E0E0;
+}
+
+
+
 /* SimpleMde markdown editor css */
 /**
  * simplemde v1.11.2
